--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
     <div class="carousel-item second-slide">
       <img src="https://images.pexels.com/photos/2325446/pexels-photo-2325446.jpeg?auto=compress&cs=tinysrgb&w=600" class="d-block w-100" alt="...">
     </div>
-    <div class="carousel-item third-slide">
+    <div class="carousel-item active third-slide">
       <img src="https://images.pexels.com/photos/2387418/pexels-photo-2387418.jpeg?auto=compress&cs=tinysrgb&w=600" class="d-block w-100" alt="...">
     </div>
 	   <div class="carousel-item fourth-slide">
@@ -28,11 +28,11 @@
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
     <span class="carousel-control-prev-icon glyphicon-chevron-left" aria-hidden="true"></span>
-    <span class="left-hidden"></span>
+   <span class="visually-hidden">Previous</span>
   </button>
   <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
     <span class="carousel-control-next-icon glyphicon-chevron-right" aria-hidden="true"></span>
-    <span class="right-hidden"></span>
+   <span class="visually-hidden">Next</span>
   </button>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </div>
