--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
     <div class="carousel-item second-slide">
       <img src="https://images.pexels.com/photos/2325446/pexels-photo-2325446.jpeg?auto=compress&cs=tinysrgb&w=600" class="d-block w-100" alt="...">
     </div>
-    <div class="carousel-item active third-slide">
+    <div class="carousel-item third-slide">
       <img src="https://images.pexels.com/photos/2387418/pexels-photo-2387418.jpeg?auto=compress&cs=tinysrgb&w=600" class="d-block w-100" alt="...">
     </div>
 	   <div class="carousel-item fourth-slide">
