--- a/main.html
+++ b/main.html
@@ -10,13 +10,13 @@
 <body>
 <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
-    <div class="carousel-item active first-slide">
+    <div class="carousel-item first-slide">
       <img src="https://images.pexels.com/photos/2662116/pexels-photo-2662116.jpeg?auto=compress&cs=tinysrgb&w=600" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item second-slide">
       <img src="https://images.pexels.com/photos/2325446/pexels-photo-2325446.jpeg?auto=compress&cs=tinysrgb&w=600" class="d-block w-100" alt="...">
     </div>
-    <div class="carousel-item third-slide">
+    <div class="carousel-item active third-slide">
       <img src="https://images.pexels.com/photos/2387418/pexels-photo-2387418.jpeg?auto=compress&cs=tinysrgb&w=600" class="d-block w-100" alt="...">
     </div>
 	   <div class="carousel-item fourth-slide">
