--- a/main.html
+++ b/main.html
@@ -27,7 +27,7 @@
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon left glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="carousel-control-prev-icon left carousel-control glyphicon-chevron-left" aria-hidden="true"></span>
    <span class="visually-hidden">Previous</span>
   </button>
   <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
