--- a/main.html
+++ b/main.html
@@ -27,11 +27,11 @@
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon left carousel-control glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="carousel-control-prev-icon left carousel-control glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
    <span class="visually-hidden">Previous</span>
   </button>
   <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
-    <span class="carousel-control-next-icon right carousel-control glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="carousel-control-next-icon right carousel-control  glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
    <span class="visually-hidden">Next</span>
   </button>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
